--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,21 +1,22 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "12345",
+    "database": "library_online_2024_02",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port":3306
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "HolaMundo98",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
+    "password": "HolaMundo98",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
